--- a/PWBD.html
+++ b/PWBD.html
@@ -120,7 +120,7 @@
 <!-- ======= Intro Section ======= -->
 	        
 	<div class="container" id="Intro">
-	<div class="accordion" id="IntroI">
+	<div class="accordion" id="IntroA">
   	<div class="accordion-item">
 		<h2 class="accordion-header" id="headingOne">
 		<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -179,8 +179,24 @@
 				<iframe src="in_art.html" width="100%" height="400vh"></iframe>
 				<figcaption>Virtual exhibition on artist-pet relationships</a></figcaption></br>
 			</div>
+	
 			<p><b>PUT "PACT FRAMEWORK".</b></p>
-		</div>
+			</div>
+		    	</div>
+			<div class="container">
+			<h5>Relevant assets <!--(include raster images or/and panoramas)--></h5>
+			<p><b>PUT "DEFINE THE CONTEXT CARDS".</b></p>
+			<h5>The target audience <!--(with characteristics, motivations, capabilities and devices)Personae e altro--></h5>
+			<p><b>PUT "PERSONAE".</b></p>
+			<h5>The location <!--(in case of on-site application it will be the museum or monument)--></h5>
+			<p>As already mentioned, even if a museum could be physically existent, our application is thought to be suitable also to be used totally online, and accordin to ??? (Beltramini and Gaiani, 2012: 60). and thus we can use to define it these two cathegories:</br>
+			<ul>
+			<ol>4.Virtual with real: in this category the researchers have identified a type of virtual museum that they define as a digital space built with the use of technology. This virtual space can shape a real space or an ideal space shaped for virtual exhibition. What identifies the virtual museum is that the objects shown are real objects that have been digitalised for display in a virtual space to be better studied or browsed.</ol>
+			<ol>5.Virtual with virtual: this last category covers museums with digital spaces that do not exist in reality, and where the objects are also born in digital space (they do not exist in real world), and are created only for the museum. That is to say a completely virtual museum, according to this classification.</ol>
+	  		</ul>
+	  		</p>
+	   		</div>
+			</div>
 	  	</div>
     		</div>
   	</div>
@@ -237,12 +253,15 @@
 	  		</p>
 	   </div>
 		
-		<div class="container" id="Concept">
-			<h4>2. Concept -------- ALISIA</h4>
-
-
-
-
+	<div class="container" id="Concept">
+	<div class="accordion" id="ConceptA">
+  	<div class="accordion-item">
+		<h2 class="accordion-header">
+		<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+		The Concept
+		</button></h2>
+		<div class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      			<div class="accordion-body">
   <h2>FIRST STEP</h2>
   <h3>WHERE THE IDEA COME FROM</h3>
 
@@ -442,6 +461,14 @@ The information section showed by the panel is divided in some parts; a brief hi
 			<h5>(e) the chosen cognitive focus (among: 1.Attention-Distraction, 2.Language-Narrative, 3. Meaningfulness-Emotions-Empathy, 4. Authenticity perception, 5. Memory-Recall)</h5>
 			<p>....</p>
 		</div>
+	  		</div>
+    		</div>
+  	</div>
+
+
+
+
+
 		<div class="container" id="Goals">
 			<h4>3. Goal (cultural, cognitive, economic, educational etc.) ALISIA</h4>
 			<p><b>PUT "DEFINE INSTITUTIONAL GOALS CARDS".</b></p>
