--- a/PWBD.html
+++ b/PWBD.html
@@ -466,15 +466,31 @@ The information section showed by the panel is divided in some parts; a brief hi
   	</div>
 
 
-
-
-
 		<div class="container" id="Goals">
-			<h4>3. Goal (cultural, cognitive, economic, educational etc.) ALISIA</h4>
+		<div class="accordion" id="GoalsA">
+  		<div class="accordion-item">
+		<h2 class="accordion-header" id="headingOne">
+		<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+		Goal (cultural, cognitive, economic, educational etc.)
+		</button></h2>
+		<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      			<div class="accordion-body">
 			<p><b>PUT "DEFINE INSTITUTIONAL GOALS CARDS".</b></p>
+			</div>
 		</div>
+		</div>
+		</div>
+		</div>
+      			
 		<div class="container" id="Requirements">
-			<h4>4. Requirements (to reach the goals)</h4>
+		<div class="accordion" id="RequirementsA">
+  		<div class="accordion-item">
+		<h2 class="accordion-header" id="headingOne">
+		<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+		Requirements
+		</button></h2>
+		<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      			<div class="accordion-body">
 			<p>A requirement is something that your product should do or a quality it should have listed in accordance with its importance:</p>
 			<ul>
 				<li>MUST:</li>
@@ -483,6 +499,9 @@ The information section showed by the panel is divided in some parts; a brief hi
 				<li>WILL NOT:</li>
 			</ul>
 			<p>They are defined from data on context, content, and people (and their needs).</p>
+		</div>
+		</div>
+		</div>
 		</div>
       </div>
 
@@ -496,19 +515,7 @@ The information section showed by the panel is divided in some parts; a brief hi
 		</button></h2>
 		<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       			<div class="accordion-body">
-        		<p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
-			  The name obviously comes from the strong visual relationship of these sos-flyers with the <cite>Old West</cite> bandit bans.</br>
-			  The website is conceived as a multi-dimensional cultural environment offering different paths to be explored such as a <strong>current virtual exhibition</strong>, a growing <strong>souvenir-book</strong> built from users interaction and some <strong>data-visualization</strong>.
-			  </p>
-			  <p>The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.</br>
-			  At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data. Each user can have the option to upload and share their own story or simply link that of others.</br>
-			  In addition to the suggestion of the user's emotional-cognitive aspect, the project also wants to provide an informative contribution, presenting some stories, works, performances of artists who have wanted to consecrate their emotional ties with their animal. 
-			</p>
-	  		</div>
-    		</div>
-  	</div>
-
-	  <h3>Development</h3>
+        		
         <p>...</p>
 	<h5>(a) The story (include an interactive narrative using Twine)</h5>
 	<p>Our story tells about a young-adult visitor looking for a new approach art history exhibition. He or she finds the Wanted! website where it is possible to access a short historical preview in the In History section and a selection of pieces of art in the In Art section. She or he is emotionally involved due to their childhood and recent souvenirs about their pets. They enjoy the exibihion, they gain more knowledge and they are happy to contribute at Your stories section with their pets' stories. Moreover they are happy and amused to realize a 3d rendering of their pet to be used in VR or AR and to be able to order for a 3d printed model of it to be gifted.</p>
@@ -581,6 +588,11 @@ The information section showed by the panel is divided in some parts; a brief hi
 			<h5>(d) Further development and maintenance issues</h5>
 			<p>....</p>	
 		</div>
+	  		</div>
+    		</div>
+  	</div>
+
+	  <h3>Development</h3>
 	</div>
 
   <!-- ======= Team Section ======= -->
