--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
       </div>
     </section>
-    <section id="data" class="social">
+    <section id="social_data" class="social">
       <div class="container" data-aos="fade-up">
 
         <div class="row no-gutters">
