--- a/PWBD.html
+++ b/PWBD.html
@@ -169,7 +169,6 @@
 						an interactive part where loading and sharing their personal stories - <a href="index.html#portfolio">Your Stories</a> section
 						- and possibly a tool able to help proactively people loosing their pets by visualizing geolocated shared data of missing pets 
 						- <a href="">Data</a> section.</p>
-						<p><b>PUT "DEFINE INST GOALS CARDS".</b></p>
 						</div>
 						<div class="container col-lg-6 col-md-6">
 							<img src="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" class="img-fluid" alt="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei" title="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei">
@@ -346,14 +345,23 @@
 			<div class="container" id="Museological">
 			<h5>B. The museological approach - 3rd step</h5>
 			<p><img src="assets/img/concep.png" width="60%" style="border-radius: 4vw; margin-left: 20%;"></p>
-			<p>Once we found the topic, we started to think about it in a museological view; trying to find the best way to translate it into a cultural journey.</p>
-			<p> Since the theme belongs to an emotional conceptuality, a good idea could be to express it trough a story that accompanies the user trough a journey, articulated in some phases at the end of which the user is free to express his personal story.</p>
-			<p>The steps that the user encounter during the journey were choosed on the base of the educational and sentymental goal that this project want to reach.</p>
-				<h5>(b) museological approach</h5>
-				<p>Cathegory E or F of Caraceni taxonomy:</br>
-				E) Virtual museum that enhance museum objects INTERPRETATION with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. </br>
-				F) Virtual museum making EXPERIMENTS with NEW MUSEOLOGICAL MODELs with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. </br>
-				
+			<p>We then started to think about the topic in a museological view trying to find the best way to translate it into a cultural journey.<br>
+Since the theme belongs to an emotional conceptuality, a good idea could be to express it through a story that accompanies the user as in a journey, articulated in simple steps repeated for every artist considered as:</p>
+<p>
+<ul>
+<ol>1.	A brief introduction on the pet artist story</ol>
+<ol>2.	More info about the artist</ol>
+<ol>3.	More info about the pet</ol>
+<ol>4.	The Artist’ room: showing some of their work related to the human-pet bound and the work of art portraying the pet</ol>
+<ol>5.	Further suggestions to know more about the topic</ol>
+</ul></p>
+<p>
+We then created a “classic” virtual exhibition based on Omeka.net, a tool that allowed us to create a database of work of art, collections, and exhibition path, as well as to propose to the user advanced tools for search and browse through the items proposed.<br>
+To this scope, we completed the museological path for two pilot artists – Frida Kahlo and Giosetta Fioroni – while we limited just to list other possible artist-pet relationship to be explored.</p>
+<p>We also devised a more <strong>interactive application “Choose your guide”</strong> that give the possibility to explore the exhibition with a freer path but with the help of a proper guide, instead of being autonomous in reading the critical parts and linearly scroll the contents, and the guide will also suggest further activities at the end of the visit to engage more the user.<br>
+The visit is then divided in rooms, accordingly with the path of the Virtual linear exhibition, each of which is dedicated to a different artist and its bond with their pet and other animals. The virtual room is showed as a real museum room (walls, sofa, paints with panels), the paintings have an interactive panel trough which (by clicking it) the user can visualize the work and go into detail.<br>
+The application, whose details will be discussed in the Development section, has then engagement and education as primary goals and it can be classified in the E or F category, according to Simona Caraceni taxonomy:</p>
+
 				<table>
 				<tr><td>NEED</td><td>Interpretaton - Experimentation/complex museum identity</td></tr>
 				<tr><td>INTERACTION</td><td>Open</td></tr>
@@ -363,7 +371,8 @@
 				<tr><td>VISITORS CONTRIBUTIONS</td><td>Allowed</td></tr>
 				</table>
 
-
+<p>E) Virtual museum that enhance museum objects INTERPRETATION with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS. 
+F) Virtual museum making EXPERIMENTS with NEW MUSEOLOGICAL MODELs with OPEN INTERACTION in an OPEN SPACE showing SELECTED (or ALL OBJECTS) of the museum collection, ALLOWING visitor CONTRIBUTIONS.</p>
 			<div>
 			
 			<div class="container" id="ExperienceD">
@@ -422,7 +431,16 @@
 		</button></h2>
 		<div id="collapseGoals" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       			<div class="accordion-body">
-			<p><b>PUT "DEFINE INSTITUTIONAL GOALS CARDS".</b></p>
+			<p>
+			As we have seen in the development of the institutional goals, the virtual exhibition and the related applications cover several goals in different areas.
+In particular:
+ 
+Economic: increase online visits and connected merchandising (3d print your pet, Wanted! traiding cards and album, Guess Who Wanted! ed., etc.)
+Cultural and educational: attract new demographics 
+Cognitive: increase visitor participation (new services as “Search for your pet”)
+
+			
+			<b>PUT "DEFINE INSTITUTIONAL GOALS CARDS".</b></p>
 			</div>
 		</div>
 		</div>
@@ -548,7 +566,25 @@
 			<h5>(c) Development to reach the cognitive focus</h5>
 			<p>....</p>
 			<h5>(c) Foreseen workflow (includes needed software, hardware, professionals)</h5>
-			<p>....</p>	
+			<p>The actual realization of the sketched Virtual Exhibition and the related applications surely required a multidisciplinary team with professionals covering all aspects of issues related to contents or technical aspects; here just a probability incomplete list:</p>
+<p><ul>
+<ol>1.	Art historian: to curate the scientific aspects of the exhibition and the related documentation</ol>
+<ol>2.	Art curator/gallerist/copyright lawyer: to face the copyright issues and possible request of reproduction</ol>
+<ol>3.	Pedagogist: to balance the contents and the language used according to the different target of the classical VE or the interactive app</ol>
+<ol>4.	a software developer – if not adopted a friendly software - in charge of the back-end</ol>
+<ol>5.	Communication team and Social media manager: to curate the website and the social media and reach new public and</ol>
+<ol>6.	User experience expert and a 3d modeller: to realize 3d guides and 3d artists’ rooms</ol>
+<ol>7.	Someone with expertise in evaluating the impact and the feedback</ol>
+</ul>
+</p>	
+
+<p>For the realization of the pilot version of VE and the related applications, we used the following software and tools:</p>
+<p><ul><ol>1.	Github
+<ol>2.	Omeka.net</ol>
+<ol>3.	Blender</ol>
+<ol>4.	Twine</ol>
+<ol>5.	Zephir 3d</ol>
+</ul></p>
 			<h5>(d) Further development and maintenance issues</h5>
 			<p>....</p>	
 		</div>
