--- a/PWBD.html
+++ b/PWBD.html
@@ -711,9 +711,7 @@ Cognitive: increase visitor participation (new services as “Search for your pe
 	  <h3>Complementary Material for the Discussion</h3>
       <p>...</p>
 		<h4>3d object or scene (3D)</h4>
-		<p><b>CHE DICI SE VEDIAMO SE POSSIAMO FAR FARE UN MODELLINO 3D DEL PER PERDUTO CHE UNO SI REALIZZA E SI PORTA A CASA TIPO STATUINA DEL PRESEPE??</p>
-		<h4>Trailer (video)--> NO</h4>
-		<p>....</p>			
+		<p><div class="sketchfab-embed-wrapper"> <iframe title="Frida's room" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/e5f124def4dc40dcaf96f73a2363854c/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/fridas-room-e5f124def4dc40dcaf96f73a2363854c?utm_medium=embed&utm_campaign=share-popup&utm_content=e5f124def4dc40dcaf96f73a2363854c" target="_blank" style="font-weight: bold; color: #1CAAD9;"> Frida's room </a> by <a href="https://sketchfab.com/alisiazarbo?utm_medium=embed&utm_campaign=share-popup&utm_content=e5f124def4dc40dcaf96f73a2363854c" target="_blank" style="font-weight: bold; color: #1CAAD9;"> alisiazarbo </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=e5f124def4dc40dcaf96f73a2363854c" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div></p>			
 		<h4>Audio (i.e. interviews of your potential users) --> NO</h4>
 		<p>....</p>
 	</div>
