--- a/index.html
+++ b/index.html
@@ -296,13 +296,27 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="Nobu - cat">
+              <div class="portfolio-info">
+                <h4>Nobu</h4>
+                <p>cat</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Nobu - cat"><i class="bx bx-plus"></i></a>
+                  <a href="Nobu.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Gringo</h4>
                 <p>cat</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Gringo - cat"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="Gringo.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -316,7 +330,7 @@
                 <p>dog</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Luli - dog"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio_2.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="Luli.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
