--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <h4>Nobu</h4>
                 <p>cat</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Nobu - cat"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/gattocertosino.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Nobu - cat"><i class="bx bx-plus"></i></a>
                   <a href="Nobu.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -344,7 +344,6 @@
                 <p>cat</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Unnamed - cat"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
