--- a/Gringo.html
+++ b/Gringo.html
@@ -114,14 +114,15 @@
                 <li><strong>Type</strong>: cat</li>
                 <li><strong>Lost in date</strong>: 01 March, 2014</li>
                 <li><strong>Lost in place</strong>: Buenos Aires (Argentina)</li>
+                <li><strong>Keywords: atigrado; flaco; <span style="color:#008000; font-weight:bold;">collar verde</span></strong>.</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>WANTED!</h2>
               <p>Me llamo Gringo</br>
               Soy atigrado y flaco</br>
-              Tengo  <span style="color:#008000; font-weight:bold;">collar verde</span>.</br>
-              ¡Gracias desde ya por cualquier informacion!</p>
+              Tengo collar verde.</br>
+              ¡Gracias desde ya por cualquier información!</p>
               <!--p>My children are used to play a lot with Gringo. We welcomed him 3 years ago and he brought a lot fo joy in our family. This photograph have been taken in Christmas time when we gift him with a <span style="color:#008000; font-weight:bold;">green collar</span>.</br></p-->
             </div>
           </div>
