--- a/Nobu.html
+++ b/Nobu.html
@@ -116,6 +116,8 @@
                 <li><strong>Type</strong>: cat</li>
                 <li><strong>Lost in date</strong>: 25 March, 2022</li>
                 <li><strong>Lost in place</strong>: via Audinot/via Galletti - Bologna (Italy)</li>
+                <li><strong>Keywords: timido; tonto; <span style="color:#A8A8A8; font-weight:bold;">Grigio</span>; pelo lucente</strong>.</li>
+
                 <!--li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
               <ul>
@@ -129,7 +131,7 @@
               <h2>WANTED!</h2>
               <p>CERCO GATTO CERTOSINO (Grigio, pelo lucente)</br>
               SPARITO IERI POMERIGGIO 25/3/22 IN VIA AUDINOT vicino angolo VIA GALLETTI</br>
-              si chiama NOBU ed è un po' <strong>timido e tonto</strong></br>
+              si chiama NOBU ed è un po' timido e tonto</br>
               se lo trovate avvisate all'affittacamere ...</br>
               oppure al ...
               </p>
