--- a/Luli.html
+++ b/Luli.html
@@ -117,22 +117,14 @@
                 <li><strong>Type</strong>: dog</li>
                 <li><strong>Lost in date</strong>: 10 July, 2014</li>
                 <li><strong>Lost in place</strong>: Parque Sarmiento - Córdoba (Argentina)</li>
-                <!--li><div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">how to embed google maps into html</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
-                </li-->
-                <!--li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 10 July, 2014</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li-->
+                <li><strong>Keywords: caniche; <span style="color:withe; background:black; font-weight:bold;">blanco</span>; <span style="color:#FF0000; font-weight:bold;">VESTIDITO ROJO</span></strong>.</li>              
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>WANTED!</h2>
               <p>SE BUSCA A LULI</br>
               CANICHE BLANCO</br>
-              CON <span style="color:#FF0000; font-weight:bold;">VESTIDO ROJO</span></br>
+              CON VESTIDITO ROJO</br>
               SE PERDIO EL 10/07/2014</br>
               ZONA PARQUE SARMIENTO</br>
     RECOMPENSA</br>
