--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!--div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -619,7 +619,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
        
-         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-0.jpg" class="img-fluid" alt="Nobu - cat">
               <div class="portfolio-info">
@@ -631,7 +631,7 @@
                 </div>
               </div>
             </div>
-          </div>-->
+          </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -669,7 +669,6 @@
                 <p>cat</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Unnamed - cat"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
