--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
               </div>
               <div class="form-group mt-3">
                 <input type="checkbox"><!--id="myCheck" onclick="myFunction()"-->
-                <label for="myCheck">I accept the <a href="">publication policies and licence</a></label> 
+                <label for="myCheck">I accept the <a href="#" onClick="alert('This is a sample form, in the final implementation you will have access to the Publication Policies and Licence text')">publication policies and licence</a></label> 
               </div>
               
               <div class="my-3">
