--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
 
               <div class="form-group mt-3">
                 <input type="checkbox"><!--id="myCheck" onclick="myFunction()"-->
-                <label for="myCheck">I have read the <a href="">GDPR Wanted! policies</a></label> 
+                <label for="myCheck">I have read the <a href="#" onClick="alert('This is a sample form, in the final implementation you will have access to the GDPR Wanted! policies')">GDPR Wanted! policies</a></label> 
               </div>
               <div class="form-group mt-3">
                 <input type="checkbox"><!--id="myCheck" onclick="myFunction()"-->
@@ -1023,7 +1023,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your story has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Share your story</button></div>
+              <div class="text-center"><button type="submit"><a href="#" onClick="alert('This is a sample form, in the final implementation you will receive a confirmation alert')">Share your story</a></button></div>
             </form>
 
           </div>
