--- a/Luli.html
+++ b/Luli.html
@@ -117,7 +117,7 @@
                 <li><strong>Type</strong>: dog</li>
                 <li><strong>Lost in date</strong>: 10 July, 2014</li>
                 <li><strong>Lost in place</strong>: Parque Sarmiento - Córdoba (Argentina)</li>
-                <li><strong>Keywords: caniche; <span style="color:withe; background:black; font-weight:bold;">blanco</span>; <span style="color:#FF0000; font-weight:bold;">VESTIDITO ROJO</span></strong>.</li>              
+                <li><strong>Keywords: caniche; <span style="color:white; background:black; font-weight:bold;">blanco</span>; <span style="color:#FF0000; font-weight:bold;">VESTIDITO ROJO</span></strong>.</li>              
               </ul>
             </div>
             <div class="portfolio-description">
