--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About</h3>
             <!--p class="fst-italic"></p><h3>Titolo da definire</h3-->
-            <p><strong>Wanted!</strong> is a project inspired by a <a href="">corpus</a> of pet lost advertisement photographs collected over the years in various places.</p>
+            <p><strong>Wanted!</strong> is a project inspired by a <a href="#preliminary_data">corpus of lost pet advertisement photographs</a> collected over the years in various places.</p>
             <p> The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.</p><br>
             <p>At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data.<br>
             Each user can have the option to upload and share their own story or simply link that of others.</br>
@@ -1011,7 +1011,7 @@
 
               <div class="form-group mt-3">
                 <input type="checkbox"><!--id="myCheck" onclick="myFunction()"-->
-                <label for="myCheck">I have read the <a href="#" onClick="alert('This is a sample form, in the final implementation you will have access to the GDPR Wanted! policies')">GDPR Wanted! policies</a></label> 
+                <label>I have read the <a href="#" onClick="alert('This is a sample form, in the final implementation you will have access to the GDPR Wanted! policies')">GDPR Wanted! policies</a></label> 
               </div>
               <div class="form-group mt-3">
                 <input type="checkbox"><!--id="myCheck" onclick="myFunction()"-->
