--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your story has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit"><a href="#" onClick="alert('This is a sample form, in the final implementation you will receive a confirmation alert')">Share your story</a></button></div>
+              <div class="text-center"><a href="#" onClick="alert('This is a sample form, in the final implementation you will receive a confirmation alert')"><button type="submit">Share your story</button></a></div>
             </form>
 
           </div>
