--- a/PWBD.html
+++ b/PWBD.html
@@ -635,7 +635,7 @@ Cognitive: increase visitor participation (new services as “Search for your pe
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 	<h5><b>Search for your pet!</b></h5></br>
 	   </div>      
-	</div>
+	</div>-->
 
 	<div class="row iframe">
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
