--- a/PWBD.html
+++ b/PWBD.html
@@ -173,22 +173,32 @@
 		</div>
             <div class="container" id="Assets">
             <h5>Relevant assets and target audience (include raster images or/and panoramas)</h5>       
-            <p>Starting from the previous analysis we started our design process choosing the most suitable assets (and their hypotetical proper audience) for each.</p>
+            <p>We arrived to define that the most suitable context for our purposes was the Virtual Exhibition thanks to a recursive design process we did using the <strong><a href="https://gifting.digital/visitorbox-design-cards/" target="_blank">VisitorBox Ideation Cards</a></strong>.<br>
+		In fact, the cards have been a useful tool to explore the relevant assets and the hypothetical proper target audience for two initial contexts we analysed: a physical museum and the virtual exhibition.<br>
+		As a reference institution for a physical museum, we took the <a href="https://www.kattenkabinet.nl/" target="_blank">KattenKabinet (Cat Cabinet)</a> in Amsterdam; we used it until the <strong>STAGE 3– Create design brief</strong> to finally decide to design the digital visitor experiences for the Virtual Exhibition.
+		</p>    
+		    
               <div class="two-grid">
                 <div class="left">
-                  <h6 style="center"><b>PHYSICAL REFERENCE INSTITUTION</b></h6>
+                  <h6 style="center"><b>Physical reference institution</b></h6>
                   <p>
                   <img src="assets/img/step1_1.png" width="50%" style="border-radius: 0; margin-left: 25%"></p>
-                  <p>
-                  <p>When we decided to deepen the idea related to a physical reference institution the concept was to develope an interactive app, mobile-interaction based, trough which the visitor could be able to interact with the exhibit using its own mobile-device (a smartphone or a tablet).</p>
+                  <div class="portfolio-links">
+			<a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Physical reference institution"><i class="bx bx-plus"></i></a>
+			</div>	
+		<p>
+                  <!--p>When we decided to deepen the idea related to a physical reference institution the concept was to develope an interactive app, mobile-interaction based, trough which the visitor could be able to interact with the exhibit using its own mobile-device (a smartphone or a tablet).</p-->
                 </div>
                 
                 <div class="right">
-                  <h6>VIRTUAL MUSEUM</h6>
+                  <h6>Virtual Exihbition</h6>
                   <p>
                     <img src="assets/img/step1.png" width="50%" style="border-radius: 0; margin-left: 25%">
-                   </p>
-                   <p>In the case of the virtual museum the idea was different, but similar under some aspects: to develope ????</p>
+                   <div class="portfolio-links">
+			<a href="assets/img/step1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution"><i class="bx bx-plus"></i></a>
+			</div>
+			</p>
+                   <!--p>In the case of the virtual museum the idea was different, but similar under some aspects: to develope ????</p-->
                 </div>
               </div>
             </div>
